[tool.poetry]
name = "aiogram-fastapi"
version = "0.1.0"
description = ""
authors = ["Vladimir Mishin <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-dotenv = "^1.0.1"
aiogram = "^3.17.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.37"
flake8 = "^7.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
